<resources>
    <string name="app_name">Тест на злость</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="title_which_question">Вопрос %1$d из %2$d</string>
    <string name="start_test">Начать тест</string>
    <string name="more">Подробнее</string>
    <string name="repeat_test">Пройти заново</string>
    <string name="again">Пройти заново</string>
    <string name="rate">Оценить</string>
    <string name="exit">Выход</string>

    <string name="banner_ad_unit_id">ca-app-pub-5534695259936833/6710504708</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->


    <string-array name="string_results">
        <item>Вы очень спокойны и чтобы Вас вывести нужно очень постараться, но даже у Вашего терпения есть предел :)</item>
        <item>В целом, Вы довольно спокойны, но когда люди с завидным постоянством начинают Вас раздражать, Вы покажете им, что они сильно заблуждались, считая Вас тихоней, которая все стерпит :)</item>
        <item>Вы дьявол во плоти. Человек, который пытается Вас выбесить, подписывает себе смертный приговор. Вы покажете ему все на что способны! И не отступите, пока не спляшете на его костях!!!</item>
    </string-array>

    <!--Rate App-->
    <string name="rate_title">Оценить Генератор отмазок</string>
    <string name="rate_message">Если вам понравилось приложение, пожалуйста оцените его в Google Play! Спасибо за вашу поддержку)</string>
    <string name="rate_us">Оценить сейчас</string>
    <string name="rate_no">Нет, спасибо</string>
    <string name="rate_remind">Напомнить позже</string>

    <string-array name="string_questions">
        <item>Если я разозлюсь, то могу ударить кого-нибудь.</item>
        <item>Я никогда не раздражась настолько, чтобы кидаться предметами.</item>
        <item>Я легко раздражаюсь, но быстро успокаиваюсь.</item>
        <item>Если меня не попросят по-хорошему, я не выполню просьбу.</item>
        <item>Мне кажется, что судьба ко мне несправедлива.</item>
        <item>Я знаю, что люди говорят обо мне за спиной.</item>
        <item>Я не могу удержаться от спора, если люди не согласны со мной.</item>
        <item>Если мне случалось обмануть кого-нибудь, я испытывал(а) мучительные угрызения совести.</item>
        <item>Мне кажется, что я не способен ударить человека.</item>
        <item>Когда я раздражаюсь, то хлопаю дверьми.</item>
        <item>Иногда люди раздражают меня просто своим присутствием.</item>
        <item>Если мне не нравится установленное правило, мне хочется его нарушить.</item>
        <item>Иногда меня гложет зависть, хотя я этого не показываю.</item>
        <item>Я думаю, что многие люди не любят меня.</item>
        <item>Я требую, чтобы люди уважали мои права.</item>
        <item>Иногда мне на ум приходят мысли, которых я стыжусь.</item>
        <item>Я знаю людей, которые способны довести меня до драки.</item>
        <item>Иногда я выражаю гнев тем, что стучу кулаком по столу.</item>
        <item>Я часто чувствую себя как пороховая бочка, готовая взорваться.</item>
        <item>Если кто-то корчит из себя начальника, я всегда поступаю ему наперекор.</item>
        <item>Нет людей, которых я по-настоящему ненавидел бы.</item>
        <item>Довольно много людей мне завидуют.</item>
        <item>Даже если я злюсь, то не прибегаю к «сильным» выражениям.</item>
        <item>Люди, увиливающие от работы, должны испытывать чувство вины.</item>
        <item>Я редко даю сдачи, даже если кто-то ударит меня.</item>
        <item>Я могу вспомнить случай, когда был так зол, что хватал первый попавшийся предмет и ломал его.</item>
        <item>Я бываю грубоват по отношению к людям, которые мне не нравятся.</item>
        <item>Когда со мной разговаривают командным тоном, мне ничего не хочется делать.</item>
        <item>Обычно я стараюсь скрывать плохое отношение к людям.</item>
        <item>Иногда мне кажется, что надо мной смеются.</item>
        <item>Если кто-то раздражает меня, я готов сказать все, что я о нем думаю.</item>
        <item>Меня угнетает то, что я мало делаю для своих родителей.</item>
        <item>Если кто-то первым ударит меня, я не отвечу ему.</item>
        <item>В споре я часто повышаю голос.</item>
        <item>Я не раздражаюсь из-за мелочей.</item>
        <item>Когда люди корчат из себя начальника, я делаю все, чтобы они не зазнавались.</item>
        <item>Я не всегда получаю то хорошее, чего заслуживаю.</item>
        <item>У меня нет врагов, которые хотели бы мне навредить.</item>
        <item>Я часто угрожаю людям, хотя и не собираюсь приводить угрозы в исполнение.</item>
        <item>Я делаю много такого, о чем впоследствии жалею.</item>
    </string-array>
</resources>
