<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/reAgressive"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_wolf_aggressive"
        android:visibility="gone">

        <Button
            android:id="@+id/button_agressive"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:background="@drawable/button_wolf_aggressive"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/color_button_bright"
            android:textSize="18sp"
            android:text="@string/again"
            android:layout_marginBottom="107dp" />

        <ImageView
            android:id="@+id/wolf_agressive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wolf_aggressive"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reCalm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_wolf_calm"
        android:visibility="gone">

        <ImageView
            android:id="@+id/wolf_calm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wolf_calm"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="66dp" />

        <Button
            android:id="@+id/button_calm"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:text="@string/more"
            android:textSize="22sp"
            android:background="@drawable/button_wolf"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="107dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reNeutral"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_wolf_calm">

        <ImageView
            android:id="@+id/wolf_neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wolf_neutral"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="66dp" />

        <Button
            android:id="@+id/button_neutral"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:text="@string/more"
            android:textSize="22sp"
            android:background="@drawable/button_wolf"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="107dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <!--<RelativeLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="#4000">-->

        <!---->

    <!--</RelativeLayout>-->

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>